projects/compiler/test/typechecker/return/error_type_mismatch.3.abra
func foo(): Int? = Ok(1 + [])
